@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.user.home.pagemode {

        class UserHomeApplicationSessionsPageModContentFactoryImpl [[UserHomeApplicationSessionsPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class UserHomeSecuritySettingsPageModContentFactoryImpl [[UserHomeSecuritySettingsPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class UserHomeOverviewPageModContentFactoryImpl [[UserHomeOverviewPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class UserHomeApplicationEventsPageModContentFactoryImpl [[UserHomeApplicationEventsPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- UserHomeApplicationSessionsPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- UserHomeSecuritySettingsPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- UserHomeOverviewPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- UserHomeApplicationEventsPageModContentFactoryImpl
    }

    namespace com.hack23.cia.web.impl.ui.application.views.common.pagemode {
        abstract class AbstractBasicPageModContentFactoryImpl [[../../../common/pagemode/AbstractBasicPageModContentFactoryImpl.html]]
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
